# bnctools

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
bnctools/: server.py  utils_api.py
docs/: Makefile  conf.py  index.rst
src/bnctools/: dcm_study_export.py  orthanc.py  orthanc_export.py  orthanc_rest.py  skeleton.py
tests/: conftest.py  test_bnctools.py  test_orthanc.py  test_skeleton.py
