[tool.poetry]
name = "bnctools"
version = "0.1.0"
description = ""
authors = ["Isabel Restrepo <isabelrestre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4"
orthanc-rest-client = "^0.5.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
orthanc_export = "bnctools.orthanc_export:run"